k8s/overlays/local/delete-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legal-pipeline-ingress
